external-crates/move/crates/move-compiler/tests/move_2024/migration/public_struct_migrate.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E01003]: invalid modifier
  ┌─ tests/move_2024/migration/public_struct_migrate.move:2:5
  │
2 │     struct S { f: u64 }
  │     ^^^^^^ Invalid struct declaration. Internal struct declarations are not yet supported
  │
  = Visibility annotations are required on struct declarations from the Move 2024 edition onwards.

error[E01003]: invalid modifier
  ┌─ tests/move_2024/migration/public_struct_migrate.move:4:5
  │
4 │     struct LongerName {
  │     ^^^^^^ Invalid struct declaration. Internal struct declarations are not yet supported
  │
  = Visibility annotations are required on struct declarations from the Move 2024 edition onwards.

error[E01003]: invalid modifier
  ┌─ tests/move_2024/migration/public_struct_migrate.move:9:5
  │
9 │     struct Positional(u64, u64, u64)
  │     ^^^^^^ Invalid struct declaration. Internal struct declarations are not yet supported
  │
  = Visibility annotations are required on struct declarations from the Move 2024 edition onwards.
