external-crates/move/crates/move-compiler/tests/move_2024/migration/public_struct_migrate.move
module a::m {
    struct S { f: u64 }

    struct LongerName {
        f: u64,
        x: S,
    }

    struct Positional(u64, u64, u64)

}
